2001-07-27  Bradford Hovinen  <hovinen@ximian.com>

	* RELEASE : 1.5.3

	* configure.in: Bump version to 1.5.3

2001-07-27  Bradford Hovinen  <hovinen@ximian.com>

	* RELEASE : 1.5.2

2001-07-27  Bradford Hovinen  <hovinen@ximian.com>

	* configure.in (capplet_modules): Update version dependency for
	libcapplet to 1.5.2

2001-07-26  Bradford Hovinen  <hovinen@ximian.com>

	* configure.in (AC_ARG_ENABLE): Fix problem where meaning of
	--enable-bonobo-conf was the opposite of what it should have been
	(CC_USE_BONOBO_CONF): Stupid, stupid autoconf

2001-07-25  Chema Celorio  <chema@celorio.com>

	* configure.in (PKG_BONOBO_CONF_CHECK): update the requirements for
	bonobo_conf to 0.9 since we now depend on it
 
2001-07-25  Chema Celorio  <chema@celorio.com>

	* configure.in (BONOBO_CHECK): remove the --enable-bonobo-conf and replace with
	--disable-bonobo-conf. The default is now with bonobo-conf

2001-07-25  Chema Celorio  <chema@celorio.com>

	(capplet_modules): add bonobo_conf back. 

2001-07-25  Chema Celorio  <chema@celorio.com>

	* configure.in (GNOMECC_CAPPLETS_OAF_FILE_IN_RULE): scape correctly the
	OAF_FILE_IN_RULE, it was not escaped before but for some reason it didn't
	generated and error

	* capplets/Makefile.am (SUBDIRS): we need to build LIBCOMMON_DIR
	before the capplets cause the capplets link with ../common/libcommon.a

2001-07-25  Bradford Hovinen  <hovinen@ximian.com>

	* configure.in: Remove IMLIB check
	(GNOMECC_CAPPLETS_DESKTOP_IN_RULE): Add sed expression to cover
	macro DESKTOP_EXEC_LINE
	(LIBCOMMON_DIR): Add option --enable-bonobo-conf

	* all: Added support for optionally compiling without bonobo-conf enabled

2001-07-25  Chema Celorio  <chema@celorio.com>

	* configure.in (dnl): remove the sawfish dir

2001-07-24  Chema Celorio  <chema@celorio.com>

	* configure.in (dnl): add a new sed line that adds the full path to the Exec line
	in the .desktop files. It is commented out for now cause gnoemcc is not apreciating
	full paths.
