@@ -1,3 +1,9 @@
+2001-07-30  Richard Hestilow  <hestilow@ximian.com>
+
+	* control-center.png: Added.
+	
+	* Makefile.am: install control-center.png
+
 2001-07-27  Bradford Hovinen  <hovinen@ximian.com>
 
 	* RELEASE : 1.5.3
